core/tests/de/unisb/cs/depend/ccs_sem/junit/integrationtests/invalid/OperatorArgumentType4.java
package de.unisb.cs.depend.ccs_sem.junit.integrationtests.invalid;


import de.unisb.cs.depend.ccs_sem.junit.FailingIntegrationTest;


public class OperatorArgumentType4 extends FailingIntegrationTest {

    @Override
    protected String getExpressionString() {
        return "a!(true*true)";
    }

    @Override
    protected int getExpectedParsingErrors() {
        return 1;
    }

    @Override
    protected boolean expectParsedProgram() {
        return false;
    }

}
